add zoom to active, keyboard shortcuts to iter shapes, rst to md

--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -27,7 +27,7 @@ resetAll=Reset All
 resetAllDetail=Reset All
 boxLineColor=Box Line Color
 boxLineColorDetail=Choose Box line color
-crtBox=Create RectBox
+crtBox=New RectBox
 crtBoxDetail=Draw a new box
 delBox=Delete RectBox
 delBoxDetail=Remove the box
