--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -87,3 +87,4 @@ menu_openRecent=Open &Recent
 chooseLineColor=Choose Line Color
 chooseFillColor=Choose Fill Color
 drawSquares=Draw Squares
+markNegative=Mark Negative
